--- a/habitat/default.toml
+++ b/habitat/default.toml
@@ -1,1 +1,5 @@
-listening_port=8080
+# Message of the Day
+message = "This is your first habitat service!"
+
+# The port number that is listening for requests
+listening_port = 8080
