[fix] refactor configurations to use correct cfg prefix

--- a/habitat/config/config.json
+++ b/habitat/config/config.json
@@ -1,4 +1,4 @@
 {
-  "message": "{{pkg.message}}",
-  "port": "{{pkg.listening_port}}"
+  "message": "{{cfg.message}}",
+  "port": "{{cfg.listening_port}}"
 }
