--- a/source/package.json
+++ b/source/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "nodemon lib/server.js --exec babel-node presets es2015,stage-2",
     "build": "babel lib -d dist",
-    "serve": "node dist/server.js",
+    "serve": "node lib/server.js",
     "test": "mocha --compilers js:babel-register"
   },
   "dependencies": {
